# Codex_Deck

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_CONTEXT.md  Project_Specification.md  README.md
.claude/: settings.json.example
.codex/: config.toml.example
backend/: README.md  pyproject.toml
backend/src/codex_deck/: __init__.py  api.py  app_server.py  approval_audit.py  approvals.py  bridge.py  events.py  files.py  git.py  main.py  scheduler.py  service.py  workspaces.py
backend/tests/: test_api.py  test_app_server.py  test_approvals.py  test_bridge.py  test_events.py  test_git.py  test_main.py  test_scheduler.py  test_workspaces.py
docs/design/: CODEX_DECK_SCREEN_MAP.md
docs/operations/: CODEX_DECK_ENDPOINTS.md
docs/poc/: CODEX_DECK_POC_PLAN.md  CODEX_DECK_POC_RESULTS.md  CODEX_DECK_UI_VALIDATION.md  CODEX_DECK_VSCODE_POC_RUNBOOK.md
docs/requirements/: CODEX_DECK_REQUIREMENTS.md  CODEX_DECK_RISKS.md  CODEX_DECK_USE_CASES.md
docs/research/: CODEX_OFFICIAL_CAPABILITY_RESEARCH.md
documents/ai/: AI_Working_Rules.md  Tool_Configuration_Guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
tools/poc/: app-server-harness.mjs  live_approval_broker.py  parallel-app-server-harness.mjs
